# stock-market-analysis

./: .env.template  .gitignore  Dockerfile  Makefile  README.md  push_image.sh  pyproject.toml
.github/workflows/: ci.yml
infrastructure/ec2-airbyte/: terraform.tfvars
infrastructure/lambda-forecast/: ecr.tf  main.tf  outputs.tf  providers.tf  scheduler.tf  terraform.tfvars  variables.tf
infrastructure/lambda-forecast/lambda_function/: app.py  requirements.txt
infrastructure/s3-snowflake-stage/: main.tf  outputs.tf  terraform.tfvars  variables.tf
src/clean-up/: clean.py  scripts.py
src/config/: settings.py
src/database/: database.py  scripts.py
src/forecast/: attributes.py  forecast.py  models.py  scripts.py
src/ingestion/: ingestion.py  scripts.py
src/permissions/: permissions.py  scripts.py
src/tasks/: scripts.py  tasks.py
src/views/: scripts.py  views.py
