[tool.poetry]
name = "stock-market-analysis"
version = "0.1.0"
description = "MIAD final project. Stock market analysis"
authors = ["Ricardo Ibarra <raib1997@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pydantic = "^1.10.7"
pandas = "^2.0.0"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.6"
boto3 = "^1.26.107"
snowflake-connector-python = "^3.0.2"
xgboost = "^1.7.5"
numpy = "^1.23.5"
sklearn = "^0.0.post5"
keras = "<2.11"
skforecast = "^0.8.0"
pyarrow = "^10.0.0"
h5py = ">2.7.0"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
atomic = true
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["black", "blib2to3", "blackd", "_black_version"]